test/pending/neg/macro-override-macro-overrides-alias-d/Impls_1.scala
import scala.reflect.macros.Context

class C

object Impls {
  def impl[T](c: Context) = c.universe.Ident(c.universe.TypeName("C"))
}
